Quiet Py3.6+ ResourceWarnings on tests
When a test calls _subproc to set up a subprocess.Popen call, if the
arg vector contains the string 'devnull' os.devnull is opened and the
resulting file object is stored in the kw vector prior to passing it to
Popen.  Reigster a close() call with atexit in this case.  Eliminates a
lot of Python 3.6+ ResourceWarning messages - 336 on this machine.

Signed-off-by: Mats Wichmann <mats@linux.com>

--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -120,6 +120,7 @@ RELEASE 3.1.0.alpha.yyyymmdd - NEW DATE WILL BE INSERTED HERE
     - quiet py3 warning in UtilTests.py
     - fix tests specifying octal constants for py3
     - fix must_contain tests for py3
+    - if test opens os.devnull, register with atexit so file opens do not leak.
     
   From Hao Wu
     - typo in customized decider example in user guide 
