win32 handle exception object correctly
Code inspection reveals this problem (4 instances):
Class 'OSError' does not define '__getitem__' so the [] operator cannot be used on its instances.
Use e.errno for e[0] and e.strerror for e[1].

Signed-off-by: Mats Wichmann <mats@linux.com>

--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -123,6 +123,7 @@ RELEASE 3.1.0.alpha.yyyymmdd - NEW DATE WILL BE INSERTED HERE
     - fix must_contain tests for py3
     - one swig test now checks for Python.h instead of failing
     - if test opens os.devnull, register with atexit so file opens do not leak.
+    - win32.py handle exception object appropriately for class
     
   From Hao Wu
     - typo in customized decider example in user guide 
