generalize the fix for #3164
Add a new flag, X_RPM_EXTRADEFS, which lets the user supply
any additional flag lines needed in the specfile. If the
tag is not present in the specfile, supply a value which
turns off debug package generation. To retain debug package
generation, supply the flag with a value of None, or with
a list that does not include the disable value.

So like the previous change the default is now not to
generate debug, but that default can be overridden, and it
is documented.

--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -121,9 +121,12 @@ RELEASE 3.1.0.alpha.yyyymmdd - NEW DATE WILL BE INSERTED HERE
     - fix tests specifying octal constants for py3
     - fix must_contain tests for py3
     - rpm package generation: fix supplying a build architecture; disable
-      auto debug package generation on certain rpmbuild versions; adjust some tests
-      to be resistant to automatic supplying of build-id file on certain rpmbuild
-      versions; a little doc and comment cleanup.
+      auto debug package generation on certain rpmbuild versions; adjust some
+      tests to be resistant to automatic supplying of build-id file on
+      certain rpmbuild versions; tests now use a file fixture for the 
+      repeated (trivial) main.c program. A little doc and comment cleanup.
+      A new tag is added, X_RPM_EXTRADEFS, to allow supplying custom settings
+      to the specfile without adding specific logic for each one to scons.
     
   From Hao Wu
     - typo in customized decider example in user guide 
