Add xz compression to tar packaging choices.
A few tweaks to scons_dev_master.py which needed to have xz added anyway:
changed mercurial to git in initial setup, install different java,
more pythons.  Note about adding ipkg-build.

Docs updated slightly for wording in addition to adding the
new tar packager.

Signed-off-by: Mats Wichmann <mats@linux.com>

--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -151,6 +151,7 @@ RELEASE 3.1.0.alpha.yyyymmdd - NEW DATE WILL BE INSERTED HERE
     - Test for tar packaging fixups
     - Stop using deprecated unittest asserts
     - messages in strip-install-dir test now os-neutral
+    - Add xz compression format to packaging choices.
     
   From Hao Wu
     - typo in customized decider example in user guide 
