--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -101,7 +101,7 @@ RELEASE 3.1.0.alpha.yyyymmdd - NEW DATE WILL BE INSERTED HERE
       This changes SCons to better comply with normal Python installation practices.
 
   From Mats Wichmann:
-    - Recognize new java 9, 10 (as 9.0 and 10.0)
+    - Recognize new java 9, 10, 11 (as 9.0 and 10.0, 11.0)
     - Updated manpage scons.xml to fix a nested list problem
     - Updated doc terminiology: use prepend instead of append as appropriate
     - XML validity fixes from SConstruct.py change
