--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -46,6 +46,7 @@ RELEASE 3.1.0.alpha.yyyymmdd - NEW DATE WILL BE INSERTED HERE
     - Fix GH Issue #3141 unicode string in a TryAction() with python 2.7 crashes.
     - Fixed issue causing stack trace when python Action function contains a unicode string when being
       run with Python 2.7
+    - Add alternate path to QT install for Centos in qt tool: /usr/lib64/qt-3.3/bin
 
   From Andrew Featherstone
     - Removed unused --warn options from the man page and source code.
