Stop using deprecated unittest asserts
failUnless and failIf have been deprecated since 2.7 and 3.1,
the docs call them aliases that exist for historical reasons.
In Python 3.7, the default DeprecationWarnings make things
very noisy, so flip these to assertTrue and assertFalse.

Signed-off-by: Mats Wichmann <mats@linux.com>

--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -149,6 +149,7 @@ RELEASE 3.1.0.alpha.yyyymmdd - NEW DATE WILL BE INSERTED HERE
     - Updated the test-framework.rst documentation.
     - Remove obsoleted internal implementaiton of OrderedDict.
     - Test for tar packaging fixups
+    - Stop using deprecated unittest asserts
     
   From Hao Wu
     - typo in customized decider example in user guide 
