--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -6,6 +6,9 @@
 
 
 RELEASE 3.1.0.alpha.yyyymmdd - NEW DATE WILL BE INSERTED HERE
+  From Paweł Tomulik:
+    - Fixed must_contain() and must_not_contain() to work with substrings
+      located at zero offset in a file.
 
   From Daniel Moody:
     - Updated FS.py to handle removal of splitunc function from python 3.7
