Get a little smarter about finding the scons engine.
In the common script stanza, Previous version was generating some paths
that were not useful.  Make sure the path pulled from package info is
not mangled into unsuability. General cleanup.

Write error message to stderr instead of stdout in scons.py.

Signed-off-by: Mats Wichmann <mats@linux.com>

--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -160,6 +160,7 @@ RELEASE 3.1.0.alpha.yyyymmdd - NEW DATE WILL BE INSERTED HERE
     - Add xz compression format to packaging choices.
     - Syntax cleanups - trailing blanks, use "is" to compare with None, etc.
       Three uses of variables not defined are changed.
+    - Some script changes in trying to find scons engine
 
   From Hao Wu
     - typo in customized decider example in user guide
