--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -48,6 +48,9 @@ RELEASE 3.1.0.alpha.yyyymmdd - NEW DATE WILL BE INSERTED HERE
       will be used and the default paths below will be ignored.
       - Default path for clang/clangxx : C:\Program Files\LLVM\bin
       - Default path for mingw         : c:\MinGW\bin
+    - Fix Java tools to search reasonable default paths for Win32, Linux, macOS.  Add required paths
+      for swig and java native interface to JAVAINCLUDES.  You should add these to your CPPPATH if you need
+      to compile with them.  This handles spaces in paths in default Java paths on windows.
       
   From Andrew Featherstone
     - Removed unused --warn options from the man page and source code.
