--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -161,6 +161,7 @@ RELEASE 3.1.0.alpha.yyyymmdd - NEW DATE WILL BE INSERTED HERE
     - Syntax cleanups - trailing blanks, use "is" to compare with None, etc.
       Three uses of variables not defined are changed.
     - Some script changes in trying to find scons engine
+    - fix M4 test for Windows line endings
 
   From Bernhard M. Wiedemann:
     - Update SCons' internal scons build logic to allow overriding build date 
