Update and add show option to cache config
scons-configure-cache.py can now show the cache configuration,
and some statistics (currently only a file count).  Script
passes pep8 now.

Signed-off-by: Mats Wichmann <mats@linux.com>

--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -164,6 +164,7 @@ RELEASE 3.1.0.alpha.yyyymmdd - NEW DATE WILL BE INSERTED HERE
     - Syntax cleanups - trailing blanks, use "is" to compare with None, etc.
       Three uses of variables not defined are changed.
     - Some script changes in trying to find scons engine
+    - Update (pep8) configure-cache script, add a --show option.
 
   From Bernhard M. Wiedemann:
     - Update SCons' internal scons build logic to allow overriding build date 
