For PR#3222: improve ms build finding
Broaden the search to also include Build Tools (the compiler
without the whole Visual Studio works).  Also in the initial
search to see if a suite is valid or not, don't just look for
a couple of locations within a given path, do a search.

Signed-off-by: Mats Wichmann <mats@linux.com>

--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -176,6 +176,9 @@ RELEASE 3.1.0.alpha.yyyymmdd - NEW DATE WILL BE INSERTED HERE
     - Update (pep8) configure-cache script, add a --show option.
     - Fix for a couple of "what if tool not found" exceptions in framework.
     - Add Textfile/Substfile to default environment. (issue #3147)
+    - Improve finding of Microsoft compiler: add a 'products' wildcard
+      in case Build Tools only is installed; search for cl.exe in located
+      path instead of just looking for a couple of built-in locations.
 
   From Bernhard M. Wiedemann:
     - Update SCons' internal scons build logic to allow overriding build date 
