--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -191,6 +191,8 @@ RELEASE 3.1.0.alpha.yyyymmdd - NEW DATE WILL BE INSERTED HERE
     - sconsign: a couple of python3 fixes; be more tolerant of implicit
       entries which have no signatures; minor PEP8 changes.
     - Fix a couple of type mistakes (list-> string, filter type -> list)
+    - Fix a couple of type mistakes in packaging tools: list-> string in msi,
+      filter type -> list in ipk
 
   From Bernhard M. Wiedemann:
     - Update SCons' internal scons build logic to allow overriding build date 
