Give sconsign a default filename.
sconsign required filename(s) or directory name(s) to do anything,
in their absence it just quits silently.  Change so if filename
argument omitted, use the same default as scons - .sconsign.dblite.

print something in case of bad options.

add an extra info line in case the sconsign cannot be read due
to pickle protocol (when py2 used in a place where scons
previously run with py3)

Tweak the manpage a bit.

Signed-off-by: Mats Wichmann <mats@linux.com>

--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -11,6 +11,8 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
     - scons-time takes more care closing files and uses safer mkdtemp to avoid
       possible races on multi-job runs.
     - Use importlib to dynamically load tool and platform modules instead of imp module
+    - sconsign: default to .sconsign.dblite if no filename is specified.
+      Be more informative in case of unsupported pickle protocol (py2 only).
 
   From John Doe:
 
