--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -8,16 +8,16 @@
 RELEASE  VERSION/DATE TO BE FILLED IN LATER
 
   From John Doe:
-
     - Whatever John Doe did.
 
+  From Daniel Moody:
+    - Update TempFileMunge class to use PRINT_CMD_LINE_FUNC
 
 RELEASE 3.0.3 - Mon, 07 Jan 2019 20:05:22 -0400
   NOTE: 3.0.2 release was dropped because there was a packaging bug. Please consider all 3.0.2
         content.
 
   From William Deegan:
-
     - Fixes to packaging logic.  Ensuring the SCons.Tool.clangCommon module is added
       to the release packages.
     - Modify scons.bat script to check for scons python script without .py extension if no file
